panama-src/genai/ffi/genai/ort_genai_c_h.java


    /**
     * Address for:
     * {@snippet lang=c :
     * OgaResult *OgaCreateSequences(OgaSequences **out)
     * }
     */
    public static MemorySegment OgaCreateSequences$address() {
        return OgaCreateSequences.ADDR;
    }

    /**
     * {@snippet lang=c :
     * OgaResult *OgaCreateSequences(OgaSequences **out)
     * }
     */
    public static MemorySegment OgaCreateSequences(MemorySegment out) {
        var mh$ = OgaCreateSequences.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaCreateSequences", out);
            }
            return (MemorySegment)mh$.invokeExact(out);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaDestroySequences {
        public static final FunctionDescriptor DESC = FunctionDescriptor.ofVoid(
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaDestroySequences");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * void OgaDestroySequences(OgaSequences *sequences)
     * }
     */
    public static FunctionDescriptor OgaDestroySequences$descriptor() {
        return OgaDestroySequences.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * void OgaDestroySequences(OgaSequences *sequences)
     * }
     */
    public static MethodHandle OgaDestroySequences$handle() {
        return OgaDestroySequences.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * void OgaDestroySequences(OgaSequences *sequences)
     * }
     */
    public static MemorySegment OgaDestroySequences$address() {
        return OgaDestroySequences.ADDR;
    }

    /**
     * {@snippet lang=c :
     * void OgaDestroySequences(OgaSequences *sequences)
     * }
     */
    public static void OgaDestroySequences(MemorySegment sequences) {
        var mh$ = OgaDestroySequences.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaDestroySequences", sequences);
            }
            mh$.invokeExact(sequences);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaSequencesCount {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_LONG,
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaSequencesCount");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * size_t OgaSequencesCount(const OgaSequences *sequences)
     * }
     */
    public static FunctionDescriptor OgaSequencesCount$descriptor() {
        return OgaSequencesCount.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * size_t OgaSequencesCount(const OgaSequences *sequences)
     * }
     */
    public static MethodHandle OgaSequencesCount$handle() {
        return OgaSequencesCount.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * size_t OgaSequencesCount(const OgaSequences *sequences)
     * }
     */
    public static MemorySegment OgaSequencesCount$address() {
        return OgaSequencesCount.ADDR;
    }

    /**
     * {@snippet lang=c :
     * size_t OgaSequencesCount(const OgaSequences *sequences)
     * }
     */
    public static long OgaSequencesCount(MemorySegment sequences) {
        var mh$ = OgaSequencesCount.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaSequencesCount", sequences);
            }
            return (long)mh$.invokeExact(sequences);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaAppendTokenSequence {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_LONG,
            ort_genai_c_h.C_POINTER
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaAppendTokenSequence");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * OgaResult *OgaAppendTokenSequence(const int32_t *token_ptr, size_t token_cnt, OgaSequences *sequences)
     * }
     */
    public static FunctionDescriptor OgaAppendTokenSequence$descriptor() {
        return OgaAppendTokenSequence.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * OgaResult *OgaAppendTokenSequence(const int32_t *token_ptr, size_t token_cnt, OgaSequences *sequences)
     * }
     */
    public static MethodHandle OgaAppendTokenSequence$handle() {
        return OgaAppendTokenSequence.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * OgaResult *OgaAppendTokenSequence(const int32_t *token_ptr, size_t token_cnt, OgaSequences *sequences)
     * }
     */
    public static MemorySegment OgaAppendTokenSequence$address() {
        return OgaAppendTokenSequence.ADDR;
    }

    /**
     * {@snippet lang=c :
     * OgaResult *OgaAppendTokenSequence(const int32_t *token_ptr, size_t token_cnt, OgaSequences *sequences)
     * }
     */
    public static MemorySegment OgaAppendTokenSequence(MemorySegment token_ptr, long token_cnt, MemorySegment sequences) {
        var mh$ = OgaAppendTokenSequence.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaAppendTokenSequence", token_ptr, token_cnt, sequences);
            }
            return (MemorySegment)mh$.invokeExact(token_ptr, token_cnt, sequences);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaAppendTokenToSequence {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_INT,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaAppendTokenToSequence");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * OgaResult *OgaAppendTokenToSequence(int32_t token, OgaSequences *sequences, size_t sequence_index)
     * }
     */
    public static FunctionDescriptor OgaAppendTokenToSequence$descriptor() {
        return OgaAppendTokenToSequence.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * OgaResult *OgaAppendTokenToSequence(int32_t token, OgaSequences *sequences, size_t sequence_index)
     * }
     */
    public static MethodHandle OgaAppendTokenToSequence$handle() {
        return OgaAppendTokenToSequence.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * OgaResult *OgaAppendTokenToSequence(int32_t token, OgaSequences *sequences, size_t sequence_index)
     * }
     */
    public static MemorySegment OgaAppendTokenToSequence$address() {
        return OgaAppendTokenToSequence.ADDR;
    }

    /**
     * {@snippet lang=c :
     * OgaResult *OgaAppendTokenToSequence(int32_t token, OgaSequences *sequences, size_t sequence_index)
     * }
     */
    public static MemorySegment OgaAppendTokenToSequence(int token, MemorySegment sequences, long sequence_index) {
        var mh$ = OgaAppendTokenToSequence.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaAppendTokenToSequence", token, sequences, sequence_index);
            }
            return (MemorySegment)mh$.invokeExact(token, sequences, sequence_index);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaSequencesGetSequenceCount {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_LONG,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaSequencesGetSequenceCount");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * size_t OgaSequencesGetSequenceCount(const OgaSequences *sequences, size_t sequence_index)
     * }
     */
    public static FunctionDescriptor OgaSequencesGetSequenceCount$descriptor() {
        return OgaSequencesGetSequenceCount.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * size_t OgaSequencesGetSequenceCount(const OgaSequences *sequences, size_t sequence_index)
     * }
     */
    public static MethodHandle OgaSequencesGetSequenceCount$handle() {
        return OgaSequencesGetSequenceCount.HANDLE;
    }

    /**
     * Address for:
     * {@snippet lang=c :
     * size_t OgaSequencesGetSequenceCount(const OgaSequences *sequences, size_t sequence_index)
     * }
     */
    public static MemorySegment OgaSequencesGetSequenceCount$address() {
        return OgaSequencesGetSequenceCount.ADDR;
    }

    /**
     * {@snippet lang=c :
     * size_t OgaSequencesGetSequenceCount(const OgaSequences *sequences, size_t sequence_index)
     * }
     */
    public static long OgaSequencesGetSequenceCount(MemorySegment sequences, long sequence_index) {
        var mh$ = OgaSequencesGetSequenceCount.HANDLE;
        try {
            if (TRACE_DOWNCALLS) {
                traceDowncall("OgaSequencesGetSequenceCount", sequences, sequence_index);
            }
            return (long)mh$.invokeExact(sequences, sequence_index);
        } catch (Error | RuntimeException ex) {
           throw ex;
        } catch (Throwable ex$) {
           throw new AssertionError("should not reach here", ex$);
        }
    }

    private static class OgaSequencesGetSequenceData {
        public static final FunctionDescriptor DESC = FunctionDescriptor.of(
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_POINTER,
            ort_genai_c_h.C_LONG
        );

        public static final MemorySegment ADDR = SYMBOL_LOOKUP.findOrThrow("OgaSequencesGetSequenceData");

        public static final MethodHandle HANDLE = Linker.nativeLinker().downcallHandle(ADDR, DESC);
    }

    /**
     * Function descriptor for:
     * {@snippet lang=c :
     * const int32_t *OgaSequencesGetSequenceData(const OgaSequences *sequences, size_t sequence_index)
     * }
     */
    public static FunctionDescriptor OgaSequencesGetSequenceData$descriptor() {
        return OgaSequencesGetSequenceData.DESC;
    }

    /**
     * Downcall method handle for:
     * {@snippet lang=c :
     * const int32_t *OgaSequencesGetSequenceData(const OgaSequences *sequences, size_t sequence_index)
     * }
     */
    public static MethodHandle OgaSequencesGetSequenceData$handle() {
        return OgaSequencesGetSequenceData.HANDLE;
    }
